--- a/loadtoast/src/main/res/values/strings.xml
+++ b/loadtoast/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">LoadToast</string>
+    <string name="loadtoast__app_name">LoadToast</string>
 </resources>
